Fix swagger to be able to use jwt auth
